# auto_brew_rs

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: adjustment.rs  controls.rs  display.rs  lib.rs  main.rs  sensor.rs  sh1107.rs  sh1107new.rs
